--- a/trunk/languages/concordamos.pot
+++ b/trunk/languages/concordamos.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-08-24T21:54:02+00:00\n"
+"POT-Creation-Date: 2023-08-24T22:11:28+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.6.0\n"
 "X-Domain: concordamos\n"
@@ -302,7 +302,7 @@ msgid "Authentication failed."
 msgstr ""
 
 #: includes/helpers.php:384
-msgid "Como votar"
+msgid "How to vote"
 msgstr ""
 
 #: includes/init.php:155
